--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "social app description",
   "main": "index.js",
   "scripts": {
-    "start": "index.js",
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
@@ -17,7 +17,9 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
-    "moment": "^2.29.4",
+    "moment": "^2.29.4"
+  },
+  "devDependencies": {
     "nodemon": "^2.0.20"
   }
 }
